feat: recorrência completa de eventos, validação aprimorada e modernização do ambiente fullstack
feat: recorrência de eventos, hot-reload no Docker e refatoração fullstack

Backend:

* Adiciona validação de entrada na criação de eventos
* Cria endpoint DELETE /series/{groupId} para exclusão de séries recorrentes
* Estende CalendarEvent com validações e novos campos: Recurrence, GroupId, Notification e Description
* EventService agora:

  * Suporta criação de séries recorrentes
  * Gera instâncias futuras automaticamente
  * Permite exclusão de série completa
  * Trata adição de recorrência em updates
* Ajusta DI do EventService para scoped
* Habilita lowercase routing

Docker:

* Migra para imagens oficiais
* Monta volumes do código-fonte
* Habilita hot-reload (dotnet watch + npm dev)
* Ajusta portas e ASPNETCORE_URLS para ambiente local

Frontend:

* Remove builds antigos
* Refatora e adiciona componentes Svelte, handlers, stores, types, utils e configs
* Atualiza testes e configuração do Playwright
* Adiciona .gitignore
* Reescreve README com documentação aprimorada, instruções de execução e descrição detalhada da stack

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" data-theme="dim">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <title>Google Calendar</title>
+    %sveltekit.head%
+  </head>
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Mini Calendar</title>
-	%sveltekit.head%
-</head>
-
-<body>
-	<div style="display: contents">%sveltekit.body%</div>
-</body>
-
+  <body>
+    <div style="display: contents">%sveltekit.body%</div>
+  </body>
 </html>
